<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_carrot_orange"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ini_sesion_title" />

            <com.app.daintybox.customviews.TextViewCustom
                android:layout_marginTop="60dp"
                android:text="@string/ini_sesion_title"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:fontName="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.app.daintybox.customviews.TextViewCustom
                android:text="@string/ini_sesion_subtitle"
                android:textColor="@color/text_gray"
                android:layout_marginTop="5dp"
                app:fontName="semibold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <com.app.daintybox.customviews.TextViewCustom
                android:text="@string/et_email"
                app:fontName="semibold"
                android:textColor="@color/text_gray"
                android:layout_marginTop="40dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.app.daintybox.customviews.EditTextCustom
                android:id="@+id/et_email"
                android:background="@drawable/border_bottom_gray"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:hint="@string/et_email_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <com.app.daintybox.customviews.TextViewCustom
                android:text="@string/et_password"
                app:fontName="semibold"
                android:textColor="@color/text_gray"
                android:layout_marginTop="40dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.app.daintybox.customviews.EditTextCustom
                android:id="@+id/et_password"
                android:background="@drawable/border_bottom_gray"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:hint="@string/et_password_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.app.daintybox.customviews.TextViewCustom
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:layout_gravity="end"
                app:fontName="semibold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <com.app.daintybox.customviews.ButtonCustom
                android:id="@+id/btn_iniciar_sesion"
                android:text="@string/btn_iniciar_sesion"
                android:textColor="@color/black"
                app:fontName="bold"
                android:layout_marginTop="25dp"
                android:textSize="18sp"
                android:background="@drawable/ripple_btn_green_cane"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.app.daintybox.customviews.TextViewCustom
                    android:text="@string/no_account"
                    android:textColor="@color/black"
                    android:layout_marginTop="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_gravity="end"
                    app:fontName="semibold"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.app.daintybox.customviews.TextViewCustom
                    android:id="@+id/btn_registrate"
                    android:text="@string/btn_registrate"
                    android:textColor="@color/text_green"
                    android:layout_marginTop="15dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_gravity="end"
                    app:fontName="semibold"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>



        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>