<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_login"
        android:contentDescription="" />

    <androidx.appcompat.widget.LinearLayoutCompat
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_carrot"
            android:scaleType="centerCrop"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.app.daintybox.customviews.TextViewCustom
            android:text="@string/login_title_1"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:textSize="35sp"
            app:fontName="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.app.daintybox.customviews.TextViewCustom
            android:text="@string/login_title_2"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:textSize="35sp"
            app:fontName="bold"
            android:layout_marginTop="-8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.app.daintybox.customviews.TextViewCustom
            android:text="@string/login_desc"
            android:textColor="#B3FCFCFC"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            app:fontName="semibold"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <com.app.daintybox.customviews.ButtonCustom
            android:id="@+id/btn_registrarme"
            android:text="@string/btn_registro"
            android:background="@drawable/ripple_btn_green_cane"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:fontName="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.app.daintybox.customviews.ButtonCustom
            android:id="@+id/btn_iniciar_sesion"
            android:text="@string/btn_iniciar_sesion"
            android:background="@drawable/ripple_btn_white"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_marginTop="15dp"
            app:fontName="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>